--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>An epic website!</title>
     <style>
       body {
-        background-color: blue;
+        background-color: Black;
         color: white;
         text-align: center;
       }
